# swagger/swagger.json
@@ -188,6 +188,179 @@
                 }
             }
         },
+        "/campo/": {
+            "get": {
+                "tags": [
+                    "campo"
+                ],
+                "description": "get Campo",
+                "operationId": "CampoController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Campo"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "campo"
+                ],
+                "description": "create Campo",
+                "operationId": "CampoController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Campo content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Campo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.Campo"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/campo/{id}": {
+            "get": {
+                "tags": [
+                    "campo"
+                ],
+                "description": "get Campo by id",
+                "operationId": "CampoController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Campo"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "campo"
+                ],
+                "description": "update the Campo",
+                "operationId": "CampoController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Campo content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Campo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Campo"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "campo"
+                ],
+                "description": "delete the Campo",
+                "operationId": "CampoController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
         "/elemento/": {
             "get": {
                 "tags": [
@@ -1327,11 +1500,11 @@
         }
     },
     "definitions": {
-        "32592.\u003cnil\u003e.SoporteActa": {
+        "36896.\u003cnil\u003e.SoporteActa": {
             "title": "SoporteActa",
             "type": "object"
         },
-        "32621.\u003cnil\u003e.Elemento": {
+        "36925.\u003cnil\u003e.Elemento": {
             "title": "Elemento",
             "type": "object"
         },
@@ -1356,6 +1529,36 @@
                 },
                 "TipoActaId": {
                     "$ref": "#/definitions/models.TipoActa"
+                }
+            }
+        },
+        "models.Campo": {
+            "title": "Campo",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "Sigla": {
+                    "type": "string"
                 }
             }
         },
@@ -1633,10 +1836,10 @@
                     "$ref": "#/definitions/models.ActaRecibido"
                 },
                 "Elementos": {
-                    "$ref": "#/definitions/32621.\u003cnil\u003e.Elemento"
+                    "$ref": "#/definitions/36925.\u003cnil\u003e.Elemento"
                 },
                 "SoportesActa": {
-                    "$ref": "#/definitions/32592.\u003cnil\u003e.SoporteActa"
+                    "$ref": "#/definitions/36896.\u003cnil\u003e.SoporteActa"
                 },
                 "UltimoEstado": {
                     "$ref": "#/definitions/models.HistoricoActa"
@@ -1680,6 +1883,10 @@
         {
             "name": "tipo_acta",
             "description": "TipoActaController operations for TipoActa\n"
+        },
+        {
+            "name": "campo",
+            "description": " CampoController operations for Campo\n"
         }
     ]
 }
